# ungoogled-chromium-debian

./: .cirrus.yml  .cirrus_Dockerfile  .gitmodules  Dockerfile-stage2  README.md  build-n-pack.sh  build.sh  docker-build.sh  flags.portable.gn  package.sh  ungoogled-chromium.yml
.github/: README.md
.github/Documentation/: Building.md  Installation.md  Supported.md
.github/workflows/: convert.sh  release.yml  (+6 more)
Documentation/: Building.md  Installation.md  Support.md  Supported.md
convert/: Makefile  README.md  compare.sh  editcontrol.pl  replace-name.pl
debian/: .gitignore  NEWS  README.Debian  README.debian  README.source  TODO  changelog  changelog.in  changelog.ungoogin  chromedriver.install  chromium-apikeys.conf  chromium-apikeys.install  chromium-browser-inspector.install  chromium-browser-l10n.install  chromium-browser.desktop  chromium-browser.dirs  chromium-browser.docs  chromium-browser.install  chromium-browser.links  chromium-browser.menu  chromium-browser.postinst  chromium-browser.prerm  chromium-browser.sh  chromium-browser.sh.in  chromium-browser.xml  chromium-common.install  chromium-driver.lintian-overrides  chromium-flags.conf  chromium-inspector.install  chromium-inspector.links  chromium-l10n.install  chromium-shell.install  chromium-shell.lintian-overrides  chromium-testsuite.install  chromium-widevine.install  chromium.bug-control  chromium.conffiles  chromium.default  chromium.desktop  chromium.dirs  (+44 more)
devutils/: check_patch_files.sh  set_quilt_vars.sh  update_patches.sh
docker-stage1/: Dockerfile
patches/: series
tar_includes/: README
(+549 files in other folders)
