blink_symbol_level=0
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_iterator_debugging=false
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_clang=true
is_debug=false
is_official_build=true
link_pulseaudio=true
proprietary_codecs=true
rtc_use_pipewire=true
symbol_level=0
use_gnome_keyring=false
use_kerberos=false
use_sysroot=false
use_vaapi=true
